--- a/webpage/meowForFamily/AddCountdown.html
+++ b/webpage/meowForFamily/AddCountdown.html
@@ -60,7 +60,7 @@
         <div>
             <h2><strong>新增成員</strong></h2>
         </div>
-        <div class="loader">
+        <div class="loader loaderBrown">
             <h1>
                 <span id="timer"></span>
             </h1>
