--- a/webpage/meowForFamily/AddRecording.html
+++ b/webpage/meowForFamily/AddRecording.html
@@ -60,7 +60,7 @@
         <div>
             <h2><strong>新增成員</strong></h2>
         </div>
-        <div class="loader">
+        <div class="loader loaderGreen">
             <h1><span>
                     <small>錄音中</small>
                 </span></h1>
