--- a/webpage/meowForLockerUser/user_applyAccount.html
+++ b/webpage/meowForLockerUser/user_applyAccount.html
@@ -38,8 +38,11 @@
                 </div>
                 <p class="text-muted" style="margin-top: 1em; margin-bottom: 0;"><small>按下確認後開始錄音倒數<br>請於倒數結束後讀出提示詞，並確保口語清晰。</small></p>
                 <div>
+                    <a href = "user_home.html" style="color:#fbf8f3;">
+                        <button class="btn btn-outline-light btn-set" type="submit" style="margin:2em 2em 0 0;">取消申請</button>
+                    </a>
                     <a href = "user_applyAccountRecordCountdown.html">
-                        <button class="btn btn-outline-light btn-set" type="submit" style="margin-top:2em;">確認申請</button>
+                        <button class="btn btn-outline-light btn-set" type="submit" style="margin:2em 0 0 2em;">確認申請</button>
                     </a>
                 </div>
             </div>
