--- a/webpage/meowForLockerUser/user_home.html
+++ b/webpage/meowForLockerUser/user_home.html
@@ -1,49 +1,59 @@
 <!doctype html>
 <html>
-    <head>
-        <link rel="stylesheet" href="/css/lockerUser.css" type="text/css"/>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-        <meta charset = "utf-8">
-        <title>user_home</title>
-    </head>
-    <body style="background-color: #fbf8f3;">
 
-        <nav class = "navbar navbar-dark bg-dark navbar-fixed-top justify-content-center" style="padding: 0.5rem 1rem; background-color: #847669 !important;">
-            <a class = "navbar-brank" style="color: #fff; text-decoration:none;" href="user_home.html">
-                <!--這邊要放我們的icon-->
-                <strong style="font-size: 1.5em;">Meow</strong>
-            </a>
+<head>
+    <link rel="stylesheet" href="/css/lockerUser.css" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <title>user_home</title>
+</head>
 
-        </nav>
+<body style="background-color: #fbf8f3;">
+
+    <nav class="navbar navbar-dark bg-dark navbar-fixed-top justify-content-center"
+        style="padding: 0.5rem 1rem; background-color: #847669 !important;">
+        <a class="navbar-brank" style="color: #fff; text-decoration:none;" href="user_home.html">
+            <!--這邊要放我們的icon-->
+            <strong style="font-size: 1.5em;">Meow</strong>
+        </a>
+
+    </nav>
+
+    <!-- 中間區塊 -->
+    <div class="container" style=" padding: 50px 100px 20px;">
         
-        <!-- 中間區塊 -->
-        <div class = "container" style = " padding: 50px 100px 20px;">
-            <div>
-                <a href = "user_applyAccount.html">
-                    <button class="btn btn-set" type="submit">申請帳號</button>
-                </a>
-            </div>
-            <div>
-                <a href = "user_verifyCountdown.html">
-                    <button class="btn btn-set" type="submit" style="margin-top:2em;">修改帳號</br>刪除帳號</br>加值服務</button>
-                </a>
-            </div>
-            <!-- <div>
-                <a href = "#">
-                    <button class="btn btn-set" type="submit" style="margin-top:2em;">刪除帳號</button>
-                </a>
-            </div>
-            <div>
-                <a href = "user_addValue_verifyCountdown.html">
-                    <button class="btn btn-set" type="submit" style="margin-top:2em;">加值服務</button>
-                </a>
-            </div> -->
-            <div>
-                <a href = "#">
-                    <button class="btn btn-set" type="submit" style="margin-top:2em;">使用說明</button>
-                </a>
-            </div>
+        <div class="card border-dark mb-3">
+            <a class = "text-dark" style = "text-decoration:none" href="#">
+                <div class="card-header" style="background-color:#847669 !important; color:white;"><strong>使用說明</strong></div>
+                <div class="card-body text-dark">
+                    <!-- <h5 class="card-title">Dark card title</h5> -->
+                    <p class="text-muted" >有問題就點</p>
+                </div>
+            </a>
         </div>
-    </body>
+        <div class="card border-dark mb-3">
+            <a class="text-dark" style="text-decoration:none" href="user_applyAccount.html">
+                <div class="card-header" style="background-color:#847669 !important; color:white;"><strong>申請帳號</strong></div>
+                <div class="card-body text-dark">
+                    <!-- <h5 class="card-title">Dark card title</h5> -->
+                    <p class="text-muted">第一使用請點選申請帳號</p>
+                </div>
+            </a>
+        </div>
+        <div class="card border-dark mb-3" >
+            <a class="text-dark" style="text-decoration:none" href="user_verifyCountdown.html">
+                <div class="card-header" style="background-color:#847669 !important; color:white;"><strong>帳號登入</strong></div>
+                <div class="card-body text-dark"  >
+                    <!-- <h5 class="card-title">Dark card title</h5> -->
+                    <p class="text-muted">如有需除值、修改資料、刪除帳號，請點選</p>
+                </div>
+            </a>
+        </div>
+    </div>
+</body>
+
 </html>
