--- a/webpage/meowForLockerUser/user_homeMenu.html
+++ b/webpage/meowForLockerUser/user_homeMenu.html
@@ -19,26 +19,39 @@
         
         <!-- 中間區塊 -->
         <div class = "container" style = " padding: 50px 100px 20px;">
-            <div>
-                <a href = "user_modifyAccount.html">
-                    <button class="btn btn-set" type="submit">修改帳號</button>
+            <div class="card border-dark mb-3">
+                <a class="text-dark" style="text-decoration:none" href="user_modifyAccount.html">
+                    <div class="card-header" style="background-color:#847669 !important; color:white;"><strong>修改帳號</strong></div>
+                    <div class="card-body text-dark">
+                        <p class="text-muted">就是修改帳號</p>
+                    </div>
                 </a>
             </div>
-            <div>
-                <a href = "user_deleteAccount.html">
-                    <button class="btn btn-set" type="submit" style="margin-top:2em;">刪除帳號</button>
+            <div class="card border-dark mb-3">
+                <a class="text-dark" style="text-decoration:none" href="user_deleteAccount.html">
+                    <div class="card-header" style="background-color:#847669 !important; color:white;"><strong>刪除帳號</strong></div>
+                    <div class="card-body text-dark">
+                        <p class="text-muted">就是刪除帳號</p>
+                    </div>
                 </a>
             </div>
-            <div>
-                <a href = "user_addValue.html">
-                    <button class="btn btn-set" type="submit" style="margin-top:2em;">加值服務</button>
+            <div class="card border-dark mb-3">
+                <a class="text-dark" style="text-decoration:none" href="user_modifyAccount.html">
+                    <div class="card-header" style="background-color:#847669 !important; color:white;"><strong>加值服務</strong></div>
+                    <div class="card-body text-dark">
+                        <p class="text-muted">就是修改帳號</p>
+                    </div>
                 </a>
             </div>
-            <div>
-                <a href = "user_home.html">
-                    <button class="btn btn-set" type="submit" style="margin-top:2em;">登出帳號</button>
+            <div class="card border-dark mb-3">
+                <a class="text-dark" style="text-decoration:none" href="user_home.html">
+                    <div class="card-header" style="background-color:#847669 !important; color:white;"><strong>登出帳號</strong></div>
+                    <div class="card-body text-dark">
+                        <p class="text-muted">就是登出帳號</p>
+                    </div>
                 </a>
             </div>
+
         </div>
     </body>
 </html>
